--- a/build.gradle
+++ b/build.gradle
@@ -1,60 +1,56 @@
-buildscript {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-    }
-    dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
-    }
-}
-
 plugins {
     id 'application'
+    id 'idea'
+    id 'project-report'
     id 'uk.gov.hmcts.java' version '0.12.63'
     id 'jacoco'
     id 'pmd'
     id 'com.github.ben-manes.versions' version '0.51.0'
     id "info.solidsoft.pitest" version '1.15.0'
     id 'io.spring.dependency-management' version '1.1.6'
-    id 'org.sonarqube' version '5.0.0.4638'
-    id 'org.springframework.boot' version '3.3.4'
+    id 'org.sonarqube' version '5.1.0.4882'
+    id 'org.springframework.boot' version '3.3.5'
     id "org.flywaydb.flyway" version '9.22.3'
-    id 'au.com.dius.pact' version '4.1.7'// do not change, otherwise serenity report fails
+    id 'au.com.dius.pact' version '4.6.15'// do not change, otherwise serenity report fails
     id 'org.owasp.dependencycheck' version '10.0.3'
+    id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.6'
 }
 
-
-apply plugin: 'java'
-apply plugin: 'net.serenity-bdd.aggregator'
-apply plugin: 'project-report'
-apply plugin: 'idea'
 
 ext {
     springCloudVersion = '2023.0.3'
 }
 
 def versions = [
-        lombok          : '1.18.32',
+        lombok          : '1.18.34',
         gradlePitest    : '1.15.0',
         pitest          : '1.16.1',
         sonarPitest     : '0.5',
         junitPitest     : '1.2.1',
         reformLogging   : '6.1.6',
-        camel           : '3.8.0',
-        pact_version    : '4.1.7',
+        camel           : '3.22.2',
+        pact_version    : '4.6.15',
         launchDarklySdk : '5.10.9',
-        junit           : '5.9.2',
-        junitPlatform   : '1.10.3',
+        junit           : '5.11.3',
+        junitPlatform   : '1.11.3',
         log4j           : '2.23.1',
         reformS2sClient : '5.2.0',
         feign           : '3.8.0',
         bytebuddy       : '1.15.3',
-        bouncycastle    : '1.78.1',
+        bouncycastle    : '1.79',
         postgresql_tc   : '1.20.0'
 ]
 
-mainClassName = 'uk.gov.hmcts.reform.professionalapi.Application'
+application {
+    mainClass = 'uk.gov.hmcts.reform.professionalapi.Application'
+
+    // this is required to force Java running on the Azure Windows Server OS into using
+    // UTF-8 as the default character set instead of windows-1252 which causes issues.
+    // this setting only applies when running via gradle bootRun -- see web.config for the
+    // java flag that configures the deployed applications
+    applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
+}
+
 def jarName = 'rd-professional-api.jar'
 
 group = 'uk.gov.hmcts.reform.refdata'
@@ -79,13 +75,13 @@ jacocoTestCoverageVerification {
 }
 
 compileJava {
-
-    options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked" << "-Werror"
+//    options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked" << "-Werror"
+    options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked" //<< "-Werror"
 }
 
 compileTestJava {
-
-    options.compilerArgs << '-Xlint:deprecation' << "-Xlint:unchecked" << "-Werror"
+//    options.compilerArgs << '-Xlint:deprecation' << "-Xlint:unchecked" << "-Werror"
+    options.compilerArgs << '-Xlint:deprecation' << "-Xlint:unchecked" //<< "-Werror"
 }
 
 tasks.withType(JavaExec).configureEach {
@@ -334,60 +330,43 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.4'
+    implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.10'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
-    implementation group: 'org.springframework.security', name: 'spring-security-core'
-
+    
     implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: versions.bouncycastle
-    implementation group: 'org.springframework', name: 'spring-core'
-    implementation group: 'org.springframework', name: 'spring-beans'
-    implementation group: 'org.springframework', name: 'spring-aop'
-    implementation group: 'org.springframework', name: 'spring-aspects'
-    implementation group: 'org.springframework', name: 'spring-context'
-    implementation group: 'org.springframework', name: 'spring-context-support'
-    implementation group: 'org.springframework', name: 'spring-expression'
-    implementation group: 'org.springframework', name: 'spring-jcl'
-    implementation group: 'org.springframework', name: 'spring-jdbc'
-    implementation group: 'org.springframework', name: 'spring-orm'
-    implementation group: 'org.springframework', name: 'spring-tx'
-    implementation group: 'org.springframework', name: 'spring-web'
-    implementation group: 'org.springframework', name: 'spring-webmvc'
 
     implementation group: 'io.github.openfeign.form', name: 'feign-form', version: versions.feign
     implementation group: 'io.github.openfeign.form', name: 'feign-form-spring', version: versions.feign
-    implementation "io.github.openfeign:feign-httpclient:11.10"
+    implementation "io.github.openfeign:feign-httpclient:13.5"
     implementation group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.1.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: versions.log4j
     implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
 
     implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
-    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.5'
 
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.reformS2sClient
 
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
-    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.18.0', ext: 'pom'
+    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.18.1', ext: 'pom'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
-    implementation 'com.github.hmcts:idam-java-client:2.1.1'
+    implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+    implementation 'com.github.hmcts:idam-java-client:3.0.3'
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.41.2'
-    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.44'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    //Fix for CVE-2021-29425
-    implementation 'commons-io:commons-io:2.8.0'
-
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.18.2'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.20.1'
     runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.18.2'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
 
-    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
-    //Added org.glassfish to support javax.el
-    implementation group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
-    implementation group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+    implementation group: 'com.google.guava', name: 'guava', version: '33.3.1-jre'
+
+    implementation group: 'jakarta.el', name: 'jakarta.el-api', version: '6.0.1'
+
 
     implementation (group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: versions.launchDarklySdk) {
         exclude group: 'com.google.guava', module: 'guava'
@@ -425,7 +404,7 @@ dependencies {
 
 
     implementation group: 'com.nimbusds', name: 'lang-tag', version: '1.7'
-    implementation group: 'org.json', name: 'json', version: '20230227'
+    implementation group: 'org.json', name: 'json', version: '20240303'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -443,8 +422,8 @@ dependencies {
         exclude group: "org.hamcrest", module: "hamcrest-library"
     }
 
-    testImplementation 'net.serenity-bdd:serenity-rest-assured:3.8.1'
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.8.1'
+    testImplementation 'net.serenity-bdd:serenity-rest-assured:4.2.6'
+    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit5', version: '4.2.6'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
@@ -459,26 +438,15 @@ dependencies {
         exclude group: "net.bytebuddy", module: "byte-buddy"
         exclude group: "net.bytebuddy", module: "byte-buddy-agent"
     }
-    testImplementation ('com.github.hmcts:rd-commons-lib:v0.0.14'){
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
-        exclude group: 'org.apache.groovy', module: 'groovy-json'
-        exclude group: 'org.apache.groovy', module: 'groovy'
-        exclude group: 'org.apache.groovy', module: 'groovy-xml'
-    }
-    testImplementation group: 'org.springframework', name: 'spring-test'
-
-    testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: versions.bytebuddy
-    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: versions.bytebuddy
-
+    testImplementation 'com.github.hmcts:rd-commons-lib:0.0.19-beta3'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.4.0'
 
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 
+    // tests on version 2 fails on flyway migrations, something like "incorrect syntax"
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-    testImplementation('com.github.tomakehurst:wiremock:2.35.2') {
-        exclude group: 'com.github.jknack'
-    }
+    testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.9.2'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
         exclude group: 'junit', module: 'junit'
@@ -495,24 +463,20 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }, version: versions.sonarPitest
 
-    testImplementation 'io.github.openfeign:feign-jackson:12.5'
+    testImplementation 'io.github.openfeign:feign-jackson:13.5'
     testImplementation group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
 
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
-    implementation group: 'com.microsoft.azure', name: 'applicationinsights-runtime-attach', version: '3.6.0'
-    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.6.0'
-
+    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.6.2'
 
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
     contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
-    contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
 
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
 
-    functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
+    functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     functionalTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
     functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
     functionalTestImplementation group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
@@ -535,8 +499,7 @@ dependencies {
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
     contractTestImplementation group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
     contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: versions.junitPlatform
-    contractTestImplementation('org.scala-lang:scala-library:2.13.14')
-
+    contractTestImplementation group: 'org.scala-lang', name: 'scala3-library_3', version: '3.6.1'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
@@ -555,34 +518,6 @@ dependencies {
 }
 
 dependencyManagement {
-
-    dependencies {
-
-        //CVE-2023-24998
-        dependencySet(group: 'commons-fileupload', version: '1.5') {
-            entry 'commons-fileupload'
-        }
-
-//        Resolves CVE-2023-4586
-        dependencySet(group: 'io.netty', version: '4.1.114.Final') {
-            entry 'netty-buffer'
-            entry 'netty-codec'
-            entry 'netty-codec-http'
-            entry 'netty-codec-socks'
-            entry 'netty-common'
-            entry 'netty-handler'
-            entry 'netty-handler-proxy'
-            entry 'netty-resolver'
-            entry 'netty-transport'
-            entry 'netty-transport-classes-epoll'
-            entry 'netty-transport-classes-kqueue'
-            entry 'netty-transport-native-epoll'
-            entry 'netty-transport-native-kqueue'
-            entry 'netty-transport-native-unix-common'
-        }
-
-    }
-
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
@@ -593,19 +528,6 @@ dependencyCheck {
     suppressionFile = 'config/owasp/suppressions.xml'
 }
 
-dependencyUpdates.resolutionStrategy = {
-    componentSelection { rules ->
-        rules.all { ComponentSelection selection ->
-            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
-                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
-            }
-            if (rejected) {
-                selection.reject('Release candidate')
-            }
-        }
-    }
-}
-
 gradle.startParameter.continueOnFailure = true
 
 bootJar {
@@ -614,30 +536,6 @@ bootJar {
         attributes('Implementation-Version': project.version.toString())
     }
 }
-
-configurations.all {
-    resolutionStrategy.eachDependency { details ->
-        // Remedy for CVE-2020-8908, ensures launchdarkly uses correct version
-        if (details.requested.group == 'com.google.guava'
-                && details.requested.name == 'guava') {
-            details.useVersion "32.1.1-jre"
-        }
-    }
-
-    resolutionStrategy.eachDependency { details ->
-        // Remedy for CVE-2024-22233 - remove once spring-boot transitively uses version >= 6.1.14
-        if (details.requested.group == 'org.springframework'
-                && (details.requested.version == '6.1.12' || details.requested.version == '6.1.13')) {
-            details.useVersion "6.1.14"
-        }
-    }
-}
-
-// this is required to force Java running on the Azure Windows Server OS into using
-// UTF-8 as the default character set instead of windows-1252 which causes issues.
-// this setting only applies when running via gradle bootRun -- see web.config for the
-// java flag that configures the deployed applications
-applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
 
 rootProject.tasks.named("processFunctionalTestResources") {
     duplicatesStrategy = 'include'
